--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,12 @@ NEXT_BASE_URL=http://localhost:3000
 NEXT_PUBLIC_ENV=dev
 
 # Auth
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Google OAuth (add on Supabase dashboard)
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
-AUTH_SECRET= # generated using `openssl rand -base64 32`
 
-# NeonDB
+# Supabase
 DATABASE_URL=
