--- a/package.json
+++ b/package.json
@@ -10,36 +10,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/core": "^0.18.4",
-    "@auth/drizzle-adapter": "^0.3.9",
-    "@neondatabase/serverless": "^0.6.0",
+    "@auth/core": "^0.29.0",
+    "@auth/drizzle-adapter": "^0.9.0",
+    "@neondatabase/serverless": "^0.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.42.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "drizzle-orm": "^0.29.1",
-    "next": "14.0.3",
-    "next-auth": "^5.0.0-beta.4",
+    "clsx": "^2.1.0",
+    "drizzle-orm": "^0.30.8",
+    "next": "14.2.0",
+    "next-auth": "^4.24.7",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.20.6",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "pg": "^8.11.3",
-    "postcss": "^8",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.0",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.77",
+    "@types/react-dom": "^18.2.25",
+    "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "14.2.0",
+    "pg": "^8.11.5",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-debug-screens": "^2.2.1",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
