--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@auth/core": "^0.29.0",
     "@auth/drizzle-adapter": "^0.9.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/ssr": "^0.3.0",
