--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate-migration": "drizzle-kit generate:pg"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -28,6 +29,7 @@
     "drizzle-orm": "^0.30.8",
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
