--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "generate-migration": "drizzle-kit generate:pg"
   },
   "dependencies": {
+    "@langchain/anthropic": "^0.1.14",
+    "@langchain/openai": "^0.0.28",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -23,10 +26,12 @@
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
+    "ai": "3.0.18",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.30.8",
+    "langchain": "^0.1.33",
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
     "next-themes": "^0.3.0",
