--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,11 @@ DATABASE_URL=
 OPENAI_API_KEY=
 ANTHROPIC_API_KEY=
 GROQ_API_KEY=
+TOGETHER_API_KEY=
 
 # LangChain
 LANGCHAIN_TRACING_V2=true
+LANGCHAIN_CALLBACKS_BACKGROUND=true
 LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=
 LANGCHAIN_PROJECT=
