--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@langchain/anthropic": "^0.1.14",
+    "@langchain/community": "^0.0.50",
+    "@langchain/groq": "^0.0.8",
     "@langchain/openai": "^0.0.28",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
