add AI functionalities (#1)
* add AI chat

* switch from yarn to bun

* add support for anthropic, groq and ollama

* add chat page description

* add new styles, new chat auto scroll and cursor prompts

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,16 @@ AUTH_GOOGLE_SECRET=
 
 # Supabase
 DATABASE_URL=
+
+# AI
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
+GROQ_API_KEY=
+TOGETHER_API_KEY=
+
+# LangChain
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_CALLBACKS_BACKGROUND=true
+LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
+LANGCHAIN_API_KEY=
+LANGCHAIN_PROJECT=
