--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "generate-migration": "drizzle-kit generate:pg"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.3",
+    "@clerk/themes": "^2.0.0",
     "@langchain/anthropic": "^0.1.14",
     "@langchain/community": "^0.0.50",
     "@langchain/groq": "^0.0.8",
     "@langchain/openai": "^0.0.28",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.5",
