--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "generate-migration": "drizzle-kit generate:pg"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@langchain/anthropic": "^0.1.14",
     "@langchain/community": "^0.0.50",
     "@langchain/groq": "^0.0.8",
     "@langchain/openai": "^0.0.28",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -28,22 +31,25 @@
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
-    "ai": "3.0.18",
+    "ai": "^3.0.30",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.8",
     "langchain": "^0.1.33",
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
     "next-themes": "^0.3.0",
+    "openai": "^4.38.2",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-intersection-observer": "^9.8.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
