--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
-    "ai": "^3.0.30",
+    "ai": "^3.0.34",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -47,6 +47,11 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-intersection-observer": "^9.8.2",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.5.3",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.0"
@@ -56,6 +61,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
