--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "generate-migration": "drizzle-kit generate:pg"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^0.0.9",
+    "@ai-sdk/openai": "^0.0.9",
     "@hookform/resolvers": "^3.3.4",
     "@langchain/anthropic": "^0.1.14",
     "@langchain/community": "^0.0.50",
@@ -31,7 +33,7 @@
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
-    "ai": "^3.0.34",
+    "ai": "^3.1.1",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
