--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@langchain/community": "^0.0.50",
     "@langchain/groq": "^0.0.8",
     "@langchain/openai": "^0.0.28",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
