--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.9",
+    "@ai-sdk/google": "^0.0.9",
     "@ai-sdk/openai": "^0.0.9",
     "@hookform/resolvers": "^3.3.4",
     "@langchain/anthropic": "^0.1.14",
@@ -31,6 +32,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
@@ -41,6 +43,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.8",
+    "framer-motion": "^11.1.9",
     "langchain": "^0.1.33",
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
@@ -54,6 +57,7 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
+    "rehype-external-links": "^3.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^2.2.2",
