--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.9",
+    "@ai-sdk/google": "^0.0.9",
     "@ai-sdk/openai": "^0.0.9",
     "@hookform/resolvers": "^3.3.4",
     "@langchain/anthropic": "^0.1.14",
     "@langchain/community": "^0.0.50",
     "@langchain/groq": "^0.0.8",
     "@langchain/openai": "^0.0.28",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -29,6 +32,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
@@ -39,6 +43,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.8",
+    "framer-motion": "^11.1.9",
     "langchain": "^0.1.33",
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
@@ -52,6 +57,7 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
+    "rehype-external-links": "^3.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^2.2.2",
@@ -67,7 +73,7 @@
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
-    "eslint": "^9.0.0",
+    "eslint": "^9.2.0",
     "eslint-config-next": "14.2.0",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
