wip: more changes to be made

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.9",
     "@ai-sdk/google": "^0.0.9",
-    "@ai-sdk/openai": "^0.0.9",
+    "@ai-sdk/openai": "^0.0.10",
     "@hookform/resolvers": "^3.3.4",
     "@langchain/anthropic": "^0.1.14",
     "@langchain/community": "^0.0.50",
@@ -37,7 +37,7 @@
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
-    "ai": "^3.1.1",
+    "ai": "^3.1.5",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -48,7 +48,7 @@
     "lucide-react": "^0.368.0",
     "next": "14.2.0",
     "next-themes": "^0.3.0",
-    "openai": "^4.38.2",
+    "openai": "^4.44.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
@@ -60,6 +60,7 @@
     "rehype-external-links": "^3.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.0"
