--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
-    "ai": "^3.1.1",
+    "ai": "^3.1.7",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -60,6 +60,7 @@
     "rehype-external-links": "^3.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.0"
