--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@supabase/supabase-js": "^2.42.3",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
+    "@vercel/analytics": "^1.2.2",
     "ai": "^3.1.7",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
