--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "3.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -38,7 +38,7 @@
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
     "@vercel/analytics": "^1.2.2",
-    "ai": "^3.1.7",
+    "ai": "latest",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -47,7 +47,7 @@
     "framer-motion": "^11.1.9",
     "langchain": "^0.1.33",
     "lucide-react": "^0.368.0",
-    "next": "14.2.0",
+    "next": "^14.2.3",
     "next-themes": "^0.3.0",
     "openai": "^4.38.2",
     "postgres": "^3.4.4",
