--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ LANGCHAIN_CALLBACKS_BACKGROUND=true
 LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
 LANGCHAIN_API_KEY=
 LANGCHAIN_PROJECT=
+
+# Langtrace
+LANGTRACE_API_KEY=
