--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@langchain/community": "^0.0.50",
     "@langchain/groq": "^0.0.8",
     "@langchain/openai": "^0.0.28",
+    "@langtrase/typescript-sdk": "^2.2.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
