--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-query-devtools": "^5.29.2",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "ai": "^3.1.9",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
