--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
-    "eslint": "^9.2.0",
+    "eslint": "9.3.0",
     "eslint-config-next": "14.2.0",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
