--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
     "eslint": "9.3.0",
-    "eslint-config-next": "14.2.0",
+    "eslint-config-next": "^14.2.3",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
