--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.3",
-    "@tanstack/react-query": "^5.29.2",
-    "@tanstack/react-query-devtools": "^5.29.2",
+    "@tanstack/react-query": "^5.36.2",
+    "@tanstack/react-query-devtools": "^5.36.2",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "ai": "^3.1.9",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -67,7 +68,7 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
@@ -75,8 +76,8 @@
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.20.14",
-    "eslint": "^9.2.0",
-    "eslint-config-next": "14.2.0",
+    "eslint": "9.3.0",
+    "eslint-config-next": "^14.2.3",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
